--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,17 @@ h3 {
   display: flex;
   gap: 24px;
 }
+.svg-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+}
 .list-two-item {
   width: calc((100% - 72px) / 4);
 }
