--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ h3 {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -51,13 +53,26 @@ h3 {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: #404bbf;
   margin-right: 76px;
+}
+.nav-list::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 .logo span {
   color: #2e2f42;
 }
 .nav-list {
+  /* Positioning */
+  position: relative;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: flex-start;
   gap: 40px;
@@ -65,6 +80,7 @@ h3 {
 }
 
 .list-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
   display: block;
   font-size: 16px;
@@ -74,13 +90,13 @@ h3 {
   color: #2e2f42;
   padding: 24px 0;
 }
-.list-link:hover {
+/* .list-link:hover {
   color: #404bbf;
 }
 .list-link:focus {
   text-decoration: underline;
   color: #404bbf;
-}
+} */
 .contacts {
   font-style: normal;
   justify-content: flex-end;
@@ -129,14 +145,19 @@ h3 {
   max-width: 496px;
 }
 .button {
+  /* Box model */
   margin: 0 auto;
   display: block;
   min-width: 169px;
   height: 56px;
+
+  /* Visual */
   border: none;
   border-radius: 4px;
-  font-family: "Roboto", sans-serif;
   background-color: #4d5ae5;
+
+  /* Typography */
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   font-size: 16px;
   line-height: 1.5;
@@ -175,12 +196,15 @@ h3 {
   gap: 24px;
 }
 .svg-cont {
+  /* Box model */
   display: flex;
   justify-content: center;
   align-items: center;
   width: 264px;
   height: 112px;
   flex-shrink: 0;
+
+  /* Visual */
   border-radius: 4px;
   border: 1px solid var(--LIGHT-SLATE, #8e8f99);
   background: var(--CLOUD, #f4f4fd);
@@ -290,8 +314,8 @@ h3 {
   color: #f4f4fd;
   text-transform: uppercase;
   color: #4d5ae5;
-  display: inline-block;
   margin-bottom: 16px;
+  display: inline-block;
 }
 .footer-logo span {
   color: #f4f4fd;
