--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,6 @@ h3 {
   color: #404bbf;
   margin-right: 76px;
 }
-.nav-list::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
 .logo span {
   color: #2e2f42;
 }
@@ -79,7 +70,18 @@ h3 {
   padding: 0 15px;
 }
 
+.list-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
 .list-link {
+  position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
   display: block;
@@ -87,16 +89,16 @@ h3 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #404bbf;
   padding: 24px 0;
 }
-/* .list-link:hover {
+.list-link:hover {
   color: #404bbf;
 }
 .list-link:focus {
   text-decoration: underline;
   color: #404bbf;
-} */
+}
 .contacts {
   font-style: normal;
   justify-content: flex-end;
