--- a/css/style.css
+++ b/css/style.css
@@ -69,17 +69,6 @@ h3 {
   gap: 40px;
   padding: 0 15px;
 }
-
-.list-link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-
 .list-link {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -91,6 +80,15 @@ h3 {
   letter-spacing: 0.02em;
   color: #404bbf;
   padding: 24px 0;
+}
+.list-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 .list-link:hover {
   color: #404bbf;
@@ -107,6 +105,9 @@ h3 {
   display: flex;
   gap: 40px;
 }
+.contacts-item{
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .contacts-link {
   text-decoration: none;
   display: block;
@@ -117,12 +118,13 @@ h3 {
   color: #434455;
   padding: 24px 0;
 }
-.contacts-link:hover {
+
+/* .contacts-link:hover {
   color: #404bbf;
 }
 .contacts-link:focus {
   color: #404bbf;
-}
+} */
 
 /* MAIN */
 
