add img for section one

--- a/css/style.css
+++ b/css/style.css
@@ -123,14 +123,21 @@ h3 {
 .contacts-link:focus {
   color: #404bbf;
 } */
-
 /* MAIN */
 
 /* SECTION 1 */
 
 .dark-bg {
-  background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1440px;
+  background-position: center;
 }
 .container .section-one-cont {
   display: flex;
@@ -157,6 +164,7 @@ h3 {
   border: none;
   border-radius: 4px;
   background-color: #4d5ae5;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Typography */
   font-family: "Roboto", sans-serif;
@@ -179,8 +187,7 @@ h3 {
 .section-two {
   padding: 120px 0;
 }
-.section-two h2 {
-}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
