--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,10 @@ h3 {
       rgba(46, 47, 66, 0.7)
     ),
     url(/images/people-office.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
-  max-width: 1440px;
+  background-repeat: no-repeat;
   background-position: center;
+  max-width: 1440px;
 }
 .container .section-one-cont {
   display: flex;
@@ -164,7 +164,7 @@ h3 {
   border: none;
   border-radius: 4px;
   background-color: #4d5ae5;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Typography */
   font-family: "Roboto", sans-serif;
