--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h3 {
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-link::after:hover {
+.list-link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -284,6 +284,10 @@ h3 {
   letter-spacing: 0.02em;
   color: #434455;
   align-items: center;
+}
+.social {
+  display: inline-block;
+
 }
 
 /* SECTION 4 */
