--- a/css/style.css
+++ b/css/style.css
@@ -78,17 +78,17 @@ h3 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #404bbf;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-link::after {
-  content: "";
+  content: '' ;
   position: absolute;
   left: 0;
   bottom: -1px;
   height: 4px;
-  background-color: #2e2f42;
+  background-color: #404bbf;;
   border-radius: 2px;
   text-decoration: underline;
 }
