--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,13 @@ h3 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #404bbf;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-link::after {
+.list-link.current{
+  color: #404bbf;  
+}
+.list-link.current::after {
   content: '' ;
   position: absolute;
   left: 0;
