--- a/css/style.css
+++ b/css/style.css
@@ -81,16 +81,16 @@ h3 {
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-link.current{
-  color: #404bbf;  
+.list-link.current {
+  color: #404bbf;
 }
 .list-link.current::after {
-  content: '' ;
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
   height: 4px;
-  background-color: #404bbf;;
+  background-color: #404bbf;
   border-radius: 2px;
   text-decoration: underline;
 }
@@ -270,6 +270,8 @@ h3 {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .workers {
   padding: 32px 0;
@@ -287,11 +289,31 @@ h3 {
   color: #434455;
   align-items: center;
 }
-.social {
-  display: inline-block;
-
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
-
+.social-link {
+  width: 40px;
+  height: 40px;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+}
+.svg {
+  fill: #fff;
+}
 /* SECTION 4 */
 
 .section-four {
