--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,9 @@ h3 {
   border-radius: 50%;
   background-color: #4d5ae5;
 }
+.social-link:first-child {
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .social-link:hover,
 .social-link:focus {
   background-color: #404bbf;
