--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ h3 {
   background-color: #4d5ae5;
 }
 .social-link:first-child {
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
 .social-link:focus {
