--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,9 @@ h3 {
   width: 100%;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.image-text:hover {
+  transform: translateY(0%);
+}
 .app {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
