--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ h3 {
   color: #2e2f42;
 }
 .nav-list {
-  /* Positioning */
   position: relative;
 
   display: inline-flex;
@@ -71,9 +70,9 @@ h3 {
   padding: 0 15px;
 }
 .list-link {
+  display: block;
   position: relative;
   text-decoration: none;
-  display: block;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -110,7 +109,6 @@ h3 {
   gap: 40px;
 }
 .contacts-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
   display: block;
   font-style: normal;
@@ -119,6 +117,7 @@ h3 {
   letter-spacing: 0.02em;
   color: #434455;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover {
@@ -338,25 +337,33 @@ h3 {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .app-cont:hover {
-  transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 .image-cont {
   position: relative;
   overflow: hidden;
 }
 .image-text {
+  /* Box model */
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+
+  /* Positioning */
   position: absolute;
   top: 0;
+
+  /* Typography */
   font-size: 16px;
-  line-height: 1.5;
   letter-spacing: 0.02em;
+  line-height: 1.5;
+
+  /* Visual */
   color: #f4f4fd;
-  padding: 40px 32px;
   background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-text:hover {
@@ -375,18 +382,20 @@ h3 {
   padding: 100px 0;
 }
 .footer-logo-cont {
+  display: inline-block;
+  margin-bottom: 16px;
+
+  /* Typography */
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.03em;
   text-align: left;
   text-decoration: none;
-  color: #f4f4fd;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
+  
   color: #4d5ae5;
-  margin-bottom: 16px;
-  display: inline-block;
 }
 .footer-logo span {
   color: #f4f4fd;
