--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,7 @@ h3 {
   color: #f4f4fd;
   background-color: #4d5ae5;
 
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-text:hover {
@@ -376,11 +377,16 @@ h3 {
   border-top: none;
   margin-bottom: 8px;
 }
+
 /* FOOTER */
 
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+.footer-cont {
+  display: flex;
+  align-items: baseline;
 }
 .footer-logo-cont {
   display: inline-block;
@@ -395,7 +401,8 @@ h3 {
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.03em;
-  
+
+  /* Visual */
   color: #4d5ae5;
 }
 .footer-logo span {
