--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,43 @@ h3 {
   display: flex;
   align-items: baseline;
 }
+.aside {
+  margin-right: 120px;
+}
+.footer-social-cont {
+}
+.footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-list {
+  display: flex;
+  gap: 16;
+}
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
+}
+.footer-social-svg {
+  fill: #f4f4fd;
+}
 .footer-logo-cont {
   display: inline-block;
   margin-bottom: 16px;
