--- a/css/style.css
+++ b/css/style.css
@@ -340,11 +340,13 @@ h3 {
 .app-cont:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
 }
 .image-cont {
   position: relative;
   overflow: hidden;
+}
+.image-cont:hover {
+  transform: translateY(0%);
 }
 .image-text {
   /* Box model */
@@ -403,7 +405,7 @@ h3 {
 }
 .footer-list {
   display: flex;
-  gap: 16;
+  gap: 16px;
 }
 .footer-social-item {
   width: 40px;
@@ -417,6 +419,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
