--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ h3 {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.image-text:hover {
+.app-cont:hover .image-text{
   transform: translateY(0%);
 }
 .app {
